# hippo_control

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: actuator_mixer_hippocampus_default.yaml
include/: actuator_command_mixer.hpp  simple_mixer.hpp
include/hippo_control/: geometric_attitude_control.hpp
include/hippo_control/attitude_control/: geometric_attitude_control.hpp
launch/: node_actuator_mixer.launch.py  node_actuator_mixer_bluerov.launch.py  node_attitude_control.launch.py  node_carrot_control.launch.py  node_rate_controller.launch.py  top_motor_failure_intra_process.launch.py  top_path_following_intra_process.launch.py  top_path_following_quaternion.launch.py  top_rate_control.launch.py  top_test_thruster_config.launch.py
launch/attitude_control/: attitude_control_bluerov.launch.py  attitude_control_generic.launch.py  attitude_control_hippocampus.launch.py
launch/carrot_control/: carrot_control_hippocampus.launch.py
src/: actuator_command_mixer.cpp  actuator_command_mixer_node.cpp  geometric_attitude_control.cpp  simple_mixer.cpp
src/attitude_control/: geometric_controller.cpp
src/mixer_bluerov/: actuator_mixer_bluerov_node.cpp  actuator_mixer_bluerov_node.hpp
src/nodes/: actuator_command_mixer_node.cpp  attitude_control_node.cpp
